<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context="com.loop.quizapp.AboutAppFragment">
    <LinearLayout
        android:id="@+id/fragment_outside_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/messageFragmentOutsideBackground"
        android:alpha="0.8"
        android:orientation="vertical">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fragment_inside_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/shape_message_fragment_background"
        android:padding="@dimen/fragment_inside_padding"
        android:layout_margin="@dimen/fragment_inside_margin">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fragment_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/fragment_between_elements_margin"/>
                <TextView
                    android:id="@+id/fragment_text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_version"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_title" />
                <TextView
                    android:id="@+id/fragment_text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_version_number"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_1"
                    android:layout_marginBottom="@dimen/fragment_between_elements_margin"/>
                <TextView
                    android:id="@+id/fragment_text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_2" />
                <TextView
                    android:id="@+id/fragment_text_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_fragment_creator_name"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_3"
                    android:layout_marginBottom="@dimen/fragment_between_elements_margin"/>
                <TextView
                    android:id="@+id/fragment_text_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_fragment_content_maker"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_4"/>
                <TextView
                    android:id="@+id/fragment_text_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_fragment_content_maker_name"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_5"
                    android:layout_marginBottom="@dimen/fragment_between_elements_margin"/>
                <TextView
                    android:id="@+id/fragment_text_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_fragment_mail_title"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_6"/>
                <TextView
                    android:id="@+id/fragment_text_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_feedback"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_text_size_small"
                    android:textColor="@color/textInMessageFragment"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_7"
                    android:layout_marginBottom="@dimen/fragment_between_elements_margin"/>
            </RelativeLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/btn_container"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_between_elements_margin">
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
