<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">
    <LinearLayout
        android:id="@+id/fragment_outside_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/messageFragmentOutsideBackground"
        android:alpha="0.8"
        android:orientation="vertical">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fragment_inside_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/shape_message_fragment_background"
        android:padding="@dimen/fragment_inside_padding"
        android:layout_margin="@dimen/fragment_inside_margin">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fragment_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_modes"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/textInMessageFragment"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/fragment_between_elements_margin"/>
                <TextView
                    android:id="@+id/fragment_text_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_game_modes_fragment_text_1"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/fragment_between_elements_margin"
                    android:layout_below="@+id/fragment_title"/>
                <TextView
                    android:id="@+id/fragment_text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_mode_yes_or_no"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="italic"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_0"/>
                <LinearLayout
                    android:id="@+id/image_game_mode_yes_or_no"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_1">
                </LinearLayout>
                <TextView
                    android:id="@+id/fragment_text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_game_modes_fragment_text_2"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/fragment_between_elements_margin"
                    android:layout_below="@+id/image_game_mode_yes_or_no"/>
                <TextView
                    android:id="@+id/fragment_text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_mode_time_challenge"
                    android:gravity="center_horizontal"
                    android:textStyle="italic"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_2"/>
                <LinearLayout
                    android:id="@+id/image_game_mode_time_challenge"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_3">
                </LinearLayout>
                <TextView
                    android:id="@+id/fragment_text_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_game_modes_fragment_text_3"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/fragment_between_elements_margin"
                    android:layout_below="@+id/image_game_mode_time_challenge"/>
                <TextView
                    android:id="@+id/fragment_text_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_mode_find_the_pairs"
                    android:gravity="center_horizontal"
                    android:textStyle="italic"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_4"/>
                <LinearLayout
                    android:id="@+id/image_game_mode_find_the_pairs"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_5">
                </LinearLayout>
                <TextView
                    android:id="@+id/fragment_text_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_game_modes_fragment_text_4"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/image_game_mode_find_the_pairs"/>
                <TextView
                    android:id="@+id/fragment_text_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_game_modes_fragment_text_5"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/message_fragment_title_text_size"
                    android:textColor="@color/textInMessageFragment"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_text_6"/>
            </RelativeLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/btn_container"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_between_elements_margin">
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
